--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Snowpack Learn Playground</title>
   </head>
   <body>
-    <h1>Snowpack Learn Playground</h1>
-
+    <div id="root"></div>
     <script type="module" src="index.js"></script>
   </body>
 </html>
