Initial cockpit page
We can't use the dev server, as pages need to be served through
cockpit-ws. So replace with watch mode.

Add a starter-kit like demo of the cockpit API by showing the hostname.

Caveat: `import`ing cockpit (as we do in current webpack projecs) does
*not* work. This needs some more thought.

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Snowpack Learn Playground" />
     <title>Snowpack Learn Playground</title>
+
+    <script type="text/javascript" src="../base1/cockpit.js"></script>
   </head>
   <body>
     <div id="root"></div>
